added computer graphics

--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
             <div class="card is-shady">
                 <div class="card-content">
                 <div class="content">
-                    <h4>Ensemble d'applications de Computer Vision </h4>
-                    <p>Reconnaissance d'image, calibration de caméra, reconstituion de nuages de points en Matlab et en Python/OpenCV. </p>
+                    <h4>Ensemble d'applications de Computer Graphics </h4>
+                    <p>Création de meshes, morphing, utilisation de textures, système de particule en C++ </p>
                 </div>
                 </div>
             </div>
