--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
+    <title>Squeele Portfolio</title>
 </head>
-<body style="overflow-y: scroll;">
+<body>
 
     <script src="JS/three.min.js"></script>
     <script src="JS/OrbitControls.js"></script>
@@ -159,20 +160,36 @@
 
     <!-- Title -->
     <h2 class="title is-2 has-text-centered">Projets en cours:</h2>
-    <p class="subtitle has-text-centered">Siradel, Rennes</p>
     <section class="container">
         <div class="columns features">
           <div class="column is-4">
             <div class="card is-shady">
-              <!-- <div class="card-image">
+               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img class="project-illustration" src="https://i.imgsafe.org/ba/baa924a5e3.png" alt="Placeholder image">
+                  <img class="project-illustration" src="Images/8502.png" alt="Placeholder image">
                 </figure>
-              </div> -->
+              </div> 
               <div class="card-content">
                 <div class="content">
-                  <h4>City-Wide Mesh Simplification </h4>
+                  <h4>City-Wide Mesh Simplification, Siradel, Rennes </h4>
                   <p>Implémentations de différents algorithmes de simplification de maillages 3D représentant des bâtiments. Simplification de bâtiments individuels, mais également création automatique de maillages simplifiés regroupant plusieurs bâtiments. </p>
+                  <a class="button is-link" href = "mesh.html">Plus d'infos</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="column is-4">
+            <div class="card is-shady">
+               <div class="card-image">
+                <figure class="image is-4by3">
+                  <img class="project-illustration" src="Images/procgen.PNG" alt="Placeholder image">
+                </figure>
+              </div> 
+              <div class="card-content">
+                <div class="content">
+                  <h4>Génération Procédurale de Terrain </h4>
+                  <p>Génération et évaluation de terrain avec le moteur Unity, le but étant de trouver les paramètres pouvant rendre un terrain, généré procéduralement, agréable à jouer. </p>
+                  <a class="button is-link" href = "https://github.com/Squeele/ProceduralGeneration">Plus d'infos</a>
                 </div>
               </div>
             </div>
@@ -183,22 +200,7 @@
           <h2 class="title is-2 has-text-centered">Projets passés:</h2>
     <section class="container">
       <div class="columns features">
-        <div class="column is-4">
-          <div class="card is-shady">
-            <!-- <div class="card-image">
-              <figure class="image is-4by3">
-                <img class="project-illustration" src="https://i.imgsafe.org/ba/baa924a5e3.png" alt="Placeholder image">
-              </figure>
-            </div> -->
-            <div class="card-content">
-              <div class="content">
-                <h4>Génération Procédurale de Terrain </h4>
-                <p>Génération et évaluation de terrain avec le moteur Unity, le but étant de trouver les paramètres pouvant rendre un terrain, généré procéduralement, agréable à jouer. </p>
-                <a class="button is-link" href = "https://github.com/Squeele/ProceduralGeneration">Plus d'infos</a>
-              </div>
-            </div>
-          </div>
-        </div>
+        
         <div class="column is-4">
           <div class="card is-shady">
             <div class="card-content">
@@ -226,7 +228,6 @@
     </section>
    
     <!-- Title -->
-    <h2 class="title is-2 has-text-centered">Projets terminés</h2>
 
     <!-- Projects -->
     <section class="container">
