--- a/mesh.html
+++ b/mesh.html
@@ -33,7 +33,7 @@
     <img src="Images/8000.png" alt="First Example: Original" width="500" height="244"></img>
     <img src="Images/8502.png" alt="First Example: Simplified" width="500" height="244"></img> <br/>
     Gauche : Premier exemple, maillages originaux: environ 4 500 000 sommets pour 8000 bâtiments (1,3 Go sur disque). Droite : Premier exemple simplifié: environ 70 000 sommets (100 Mo sur disque). <br/>
-    <img src="Images/4000000.png" alt="Second Example: Original" width="260" height="345"></img>
+    <img src="Images/4000000.PNG" alt="Second Example: Original" width="260" height="345"></img>
     
     <img src="Images/300.png" alt="Second Example: Simplified" width="260" height="345"></img> <br/>
     Gauche : Deuxième exemple, maillages originaux avec des bâtiments très détaillés. Environ 4 000 000 sommets.
