--- a/index.html
+++ b/index.html
@@ -89,10 +89,7 @@
     function addName()
     {
       //empty scene so names never overlap
-        while(scene.children.length > 0)
-        { 
-            scene.remove(scene.children[0]); //quick and dirty way, but anyway we only have a few characters without textures
-        }
+
         text_group = new THREE.Group();
         var fontload = new THREE.FontLoader()
         fontload.load('Font/Roboto_Black_Regular.json',
@@ -136,18 +133,21 @@
     function animate()
     {
         requestAnimationFrame( animate );
-        for(var i = 0; i < states.length;i++)
+        if(text_group.children.size > 0)
         {
-            if(states[i] == true)
-            {
-                text_group.children[i].position.y+=speed[i];
-                speed[i]+=0.1;
-            }
-            else
-            {
-                text_group.children[i].rotation.y=Math.sin((new Date().getTime())/1000)*Math.PI/18;
-            }
-        }
+          for(var i = 0; i < states.length;i++)
+          {
+              if(states[i] == true)
+              {
+                  text_group.children[i].position.y+=speed[i];
+                  speed[i]+=0.1;
+              }
+              else
+              {
+                  text_group.children[i].rotation.y=Math.sin((new Date().getTime())/1000)*Math.PI/18;
+              }
+          }
+          }
         controls.update();
         render();
     }
@@ -314,7 +314,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                     <figure class="image is-4by3">
-                      <img class="project-illustration" src="Images/kidpunk.PNG" alt="kidpunk">
+                      <img class="project-illustration" src="Images/kidpunk.png" alt="kidpunk">
                     </figure>
                   </div> 
                 <div class="card-content">
