--- a/index.html
+++ b/index.html
@@ -248,16 +248,7 @@
             </div>
           </div>
         </div>
-        <div class="column is-4">
-          <div class="card is-shady">
-            <div class="card-content">
-              <div class="content">
-                <h4>Capture et visualisation des mouvements d'un chirurgien </h4>
-                <p>Extraction avec OpenPose les gestes et postures du chirurgien afin de les intégrer dans un visualiseur web basée three.js. </p>
-              </div>
-            </div>
-          </div>
-        </div>
+        
       </div>
       
     </section>
@@ -301,6 +292,21 @@
             </div>
         </div>
     </section>
+
+    <section class="container">
+      <div class="columns features">
+        <div class="column is-4">
+          <div class="card is-shady">
+            <div class="card-content">
+              <div class="content">
+                <h4>Capture et visualisation des mouvements d'un chirurgien </h4>
+                <p>Extraction avec OpenPose les gestes et postures du chirurgien afin de les intégrer dans un visualiseur web basée three.js. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </section>
 
     <!-- Title -->
     <h2 class="title is-2 has-text-centered">Projets personnels</h2>
