--- a/index.html
+++ b/index.html
@@ -179,28 +179,42 @@
     <!-- Title -->
 
     <h2 class="title is-2 has-text-centered">Projets en cours:</h2>
+    
     <section class="container">
-        <div class="columns features">
-          <div class="column is-4">
-            <div class="card is-shady">
- 
-              <div class="card-content">
-                <div class="content">
-                  <h4>Compression Progressive de Maillage 3D texturés, LIRIS/INRIA, Lyon</h4>
-                  <p>Implémentation de méthodes de simplification et de raffinement de modèles 3D et utilisation de techniques d'encodage pour réduire la taille de modèles 3D.</p>
-                </div>
+      <div class="columns features">
+        <div class="column is-4">
+          <div class="card is-shady">
+
+            <div class="card-content">
+              <div class="content">
+                <h4>Kazaplan</h4>
+                <p>Implémentation de la Middle Definition. Implémentation d'améliorations de rendu Haute Définition sur Blender.</p>
               </div>
             </div>
           </div>
-          </div>
+        </div>
+        </div>
 </section>
-
 
 
 
 
           <!-- Projects -->
           <h2 class="title is-2 has-text-centered">Projets passés:</h2>
+          <section class="container">
+            <div class="columns features">
+              <div class="column is-4">
+                <div class="card is-shady">
+     
+                  <div class="card-content">
+                    <div class="content">
+                      <h4>Compression Progressive de Maillage 3D texturés, LIRIS/INRIA, Lyon</h4>
+                      <p>Implémentation de méthodes de simplification et de raffinement de modèles 3D et utilisation de techniques d'encodage pour réduire la taille de modèles 3D. Utilisation de C++ sur la plateforme MEPP. </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div>
     <section class="container">
       <div class="columns features">
           <div class="column is-4">
@@ -323,33 +337,28 @@
                   </div> 
                 <div class="card-content">
                 <div class="content">
-                    <h4>KidPunk</h4>
-                    <p>Jeu de plate-formes, développé en équipe sur le moteur Godot. Level-design/Visuels/Musique/Intégration d'assets</p>
-                    <a class="button is-link" href =  "https://ldjam.com/events/ludum-dare/46/kidpunk">Plus d'infos</a>
+                    <h4>Game Jams</h4>
+                    <p>Plusieurs Ludum Dare à mon actif! Des fois des rôles plus artistiques, des fois des rôles de prog, des fois du level design... au petit bonheur la chance selon les projets et les équipes!</p>
+                    <a class="button is-link" href =  "https://ldjam.com/users/squeele/games">Plus d'infos</a>
                 </div>
                 </div>
             </div>
             </div>
 
-            <div class="column is-4">
-              <div class="card is-shady">
-                  <div class="card-content">
-                  <div class="content">
-                      <h4>Once upon a Chip</h4>
-                      <p>Jeu d'action développé en équipe sur Unity. Level-design/Visuels/Musique/Programmation </p>
-                      <a class="button is-link" href =  "https://ldjam.com/events/ludum-dare/45/once-upon-a-chip">Plus d'infos</a>
-                  </div>
-                  </div>
-              </div>
-              </div>
+
   
             <div class="column is-4">
             <div class="card is-shady">
+              <div class="card-image">
+                <figure class="image is-4by3">
+                  <img class="project-illustration" src="Images/chay.png" alt="chay">
+                </figure>
+              </div> 
                 <div class="card-content">
                 <div class="content">
-                    <h4>Father's Duty</h4>
-                    <p>Jeu développé en équipe sur le moteur Godot à l'occasion de la Ludum Dare 40.</p>
-                    <a class="button is-link" href =  "https://ldjam.com/events/ludum-dare/40/patternal-duty">Plus d'infos</a>
+                    <h4>Chay</h4>
+                    <p>Projet de bande dessinée terminé en octobre 2023! Après la sortie en ligne, quelques dizaines d'exemplaires ont été vendus.</p>
+                    <a class="button is-link" href =  "https://www.mangadraft.com/bd/chay">Plus d'infos</a>
                 </div>
                 </div>
             </div>
